Implement an exponential NAK backoff.
Clear the signal_pipe fd from the fdset when all signals have
been read.
Don't release a link local address.
Use sysconf to detect if we have a working monotonic clock.
Only request NTP, NIS, etc if we have compiled that feature in.
dhcpcd --version now shows what compile time options were used.

dhcpcd-3.1.7
Add warnings about requesting a link local address.
Always add a link local route unless we're given a non-private
address by the DHCP server.
Reduce stack usage by using malloc more.
If we're on a different subnet from the one we get DHCP for, don't
use our current address in messages. Thanks to Wilson Callan.
Skip over bogus EINTR error on select when arp checking for a
different address from what we already have.

dhcpcd-3.1.6
--skiproutes has been added for no fork users so that we know if we
can delete the route at a later date.
Many thanks to Michael Durrant for testing the below changes.
Compile and work on OSX/Darwin.
If we have no fork then we re-exec ourselves with --daemonised.
Improved the build system so we automatically detect if we need
librt or libresolv and if fork() works or not.
Move back to using librt for clock_gettime on Linux systems.

dhcpcd-3.1.5
Fix the flushing of addresses on BSD systems.
Rework get_time so that we don't link to librt on Linux.
Thanks to regenrecht for reporting the below three overflows:-
 Fix a potential buffer overflow in hwaddr_ntoa if length > 42.
 Fix a potential heap overflow in decode_CSR when CIDR > 32.
 Fix a potential heap overflow in decode_sipservers when length is 1.
-L actually doesn't do IPv4LL as advertised.

dhcpcd-3.1.4
Ensure ARP checking times out when there is a flood.
Add -x option to quit without releasing the lease.

dhcpcd-3.1.3
Fix link routes which broke in 3.1.2.

dhcpcd-3.1.2
Use a generic route logger.
Fix static route netmask calculation and applicaton.
Use --nodeps when restarting services.