@@ -1,3 +1,4 @@
+make HAVE_FORK=yes|no should be used if cross compiling.
 Implement an exponential NAK backoff.
 Clear the signal_pipe fd from the fdset when all signals have
 been read.
